tests/fixtures/negative/skp1-unsupported-version.hex
534b50310201010000100000
0000000000000000000000000000000000000000000000000000000000000000
0000000000000000
000080000000000800000001
